--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style type="text/css"> body { background-color:#undefined; }</style>
     
   </head>
-  <body>
+  <body id="bun">
     <div id="game">
       <canvas id="mainCanvas" width="256" height="224">No Canvas Support</canvas>
     </div>
@@ -31,4 +31,6 @@
     </script>
     <script src="binjgb.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/gamecontroller.min.js"></script>
+    <script src="js/bunmenu.js"></script>
 </body>
