--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
   </head>
   <body id="bun">
+
     <div id="game">
       <canvas id="mainCanvas" width="256" height="224">No Canvas Support</canvas>
     </div>
@@ -46,10 +47,36 @@
 		  <h3 class="MenuItem" id="exit_button" onmouseover="highlightHovered(3)" onclick="exitGame()">Exit Game</h3>
 		</li>
 	  </ul>
-	  
+
+
+
+    <!-- Work in progress
+    <ul id="KeyMapping" style="list-style-type: none;padding: 0;margin: 0;">
+		<li>
+		  <h2 class="MenuItem" style="margin: 8px;">Key Mapping</h2>
+		</li>
+		<li>
+		  <h3 class="MenuItem" id="resume_button" style="margin: 8px;" onmouseover="highlightHovered(0)" onclick="unpause()">Resume Game</h3>
+		</li>
+		<li>
+		  <h4 class="MenuItem" id="fullscreen_button" onmouseover="highlightHovered(1)" onclick="toggleFullscreen()">Toggle Full Screen</h4>
+		</li>
+    <li>
+		  <h4 class="MenuItem" id="keyconfig_button" onmouseover="highlightHovered(2)" onclick="showKeyConfig()">Key Mapping</h4>
+		</li>
+		<li>
+		  <h3 class="MenuItem" id="exit_button" onmouseover="highlightHovered(3)" onclick="exitGame()">Exit Game</h3>
+		</li>
+	  </ul>
+	  -->
 
 	</div>   
-	</div>     
+	</div>    
+  <div class="centered">
+            <div height="100%" class="vertical-center">
+              <h1 class="OutputText" style="display: none;">Test</h1>
+            </div>
+        </div> 
     <script>
 		var customControls = {"a":["k","x"],"b":["j","z"],"select":["Shift"," "]};
     </script>
